began placing encoders, squaring matrix * squaring matrix gains MCU pins * RE footpints need silkscreen changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "keebio-components"]
 	path = keebio-components
 	url = https://github.com/keebio/keebio-components
+[submodule "reversible-kicad"]
+	path = reversible-kicad
+	url = git@github.com:tzarc/reversible-kicad.git
